--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,20 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 body{
-    font-family: 'Roboto', sans-serif;
+    background-color: aquamarine;
 }
+
+img {
+    height: auto;
+}
+
 .topHeader {
-    background: white;
+    background: rgb(124, 71, 7);
+    text-align: center;
 }
+
 .feed {
     background: gray;
-}
-img {
-    width: 50%;
-    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
 }
